; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_iterator.c_assert_retrieval.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_iterator.c_assert_retrieval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@GIT_ITEROVER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @assert_retrieval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_retrieval(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %7, align 4
  %10 = load i32, i32* @repo, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @git_branch_iterator_new(i32** %5, i32 %10, i32 %11)
  %13 = call i32 @cl_git_pass(i32 %12)
  br label %14

14:                                               ; preds = %18, %2
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @git_branch_next(i32** %6, i32* %9, i32* %15)
  store i32 %16, i32* %8, align 4
  %17 = icmp eq i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %14
  %19 = load i32, i32* %7, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %7, align 4
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @git_reference_free(i32* %21)
  br label %14

23:                                               ; preds = %14
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @git_branch_iterator_free(i32* %24)
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* @GIT_ITEROVER, align 4
  %28 = call i32 @cl_assert_equal_i(i32 %26, i32 %27)
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @cl_assert_equal_i(i32 %29, i32 %30)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_branch_iterator_new(i32**, i32, i32) #1

declare dso_local i32 @git_branch_next(i32**, i32*, i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_branch_iterator_free(i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
